---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2020.11.24
  Features:
    - Moved to Factorio 1.1
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2020.08.28
  Features:
    - Moved to Factorio 1.0
    - Restores the classic technology icons for Mining Producitivy
  Bugfixes:
    - Fixed that several variables were declared globally instead of locally
---------------------------------------------------------------------------------------------------
Version: 0.18.2
Date: 2020.06.18
  Changes:
    - Disable the mining-drill integration patch added by 0.18.32
---------------------------------------------------------------------------------------------------
Version: 0.18.1
Date: 2020.06.13
  Features:
    - Initial release