@@ -1,7 +1,7 @@
 {
   "name": "classic-mining-drill",
   "version": "1.1.0",
-  "factorio_version": "1.0",
+  "factorio_version": "1.1",
   "title": "Classic Mining Drill",
   "author": "Kirazy",
   "contact": "kirazy@live.com",
